frontend: css: fix word-wrap
Fix word-wrap for long metric names and for long test names
when displaying regressions/fixes

--- a/squad/frontend/static/main.css
+++ b/squad/frontend/static/main.css
@@ -182,6 +182,10 @@ table.test-results-details {
   margin-top: 1em;
 }
 
+.metric-selected small, .popover-content li {
+	word-break: break-all;
+}
+
 .settings-nav a {
   display: block;
 }
